feat(edit-distance): Needleman-Wunsch algorithm

--- a/tarea1.ipynb
+++ b/tarea1.ipynb
@@ -38,7 +38,11 @@
     "Sea $\\mathit{rev}(\\mathbf{X})$ el reverso de $\\mathbf{X}$.\n",
     "\n",
     "Sean $\\mathbf{X}$ e $\\mathbf{Y}$ las secuencias a alinear.\n",
-    "Sea $x$ un carácter de $\\mathbf{X}$"
+    "Sea $x$ un carácter de $\\mathbf{X}$ e $y$ un carácter de $\\mathbf{Y}$.\n",
+    "Suponga que $\\mathit{Del}(x)$, $\\mathit{Ins}(y)$ y $\\mathit{Sub}(x, y)$ son funciones que representan\n",
+    "el costo de borrar $x$, insertar $y$ o reemplazar $x$ por $y$.\n",
+    "\n",
+    "Se define `nw_score(x, y)` de la siguiente forma"
    ],
    "metadata": {
     "collapsed": false
